Bijayini | #1894 | UI issues -Issue 3: Gap between two lab orders in “Lab order Display Control”

--- a/ui/app/styles/clinical/_orders.scss
+++ b/ui/app/styles/clinical/_orders.scss
@@ -316,7 +316,7 @@
     }
 }
 .order-sub-heading-container{
-    width:280px;
+    width:290px;
     text-align: right;
     .order-sub-heading{
         font-size: 12px;
